--- a/detail-page/fitting-an-ej22-radiator-in-an-l-series.html
+++ b/detail-page/fitting-an-ej22-radiator-in-an-l-series.html
@@ -25,10 +25,10 @@
   <meta name="description" content="Curated Offroad Subaru Build Guides.">
   <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
   <!--  Facebook -->
-  <meta property="og:title" content="  DIY Fender Cutting &amp; Rolling " />
-  <meta property="og:description" content="   " />
+  <meta property="og:title" content="  Fitting an EJ22 Radiator in an L-series " />
+  <meta property="og:description" content="  EJ22 Swap " />
 
-    <meta property="og:image" content="/static/img/guides/fenderRolling.jpg" />
+    <meta property="og:image" content="/static/img/guides/ej22radiator/9eaToEjRadiator-min.jpg" />
 
 
 </head>
@@ -57,14 +57,37 @@
 
 
     <section class="details">
-        <h1 class="details-headline">DIY Fender Cutting &amp; Rolling</h1>
-        
-          <a href="https://www.pirate4x4.com/forum/ford/824933-tips-fender-cutting.html" class="btn grey-background">Link</a>
-          <a href="/static/pdf/tips-fender-cutting.pdf" class="btn grey-background">PDF Archive</a>
+        <h1 class="details-headline">Fitting an EJ22 Radiator in an L-series</h1>
+         <p class="details-author">by   <a href="https://www.instagram.com/dwesleybrown">
+          Doug Brown
+          </a>
+
+          </p>
 
         <div class="details-content">
-            <img  src="/static/img/guides/fenderRolling.jpg">
-            <p>This was a great source of inspiration for my own project when I cut and rolled my fenders.</p><p> You need a welder, tin snips, flap sander, a pair of pliers and an hour or two each wheel well to make a uniform lip that looks nearly factory.</p>
+            <img  src="/static/img/guides/ej22radiator/9eaToEjRadiator-min.jpg">
+            <p>In the fall of 2017 I swapped my tired ea82 for a 160k mile ej22. The swap went well and everything ran reliably until I blew the headgaskets a few months later. I should have changed the headgaskets before swapping, but I like to learn the hard way.</p>
+            <p>I initially did the swap with the factory ea82 radiator. I had read it was sufficient for the larger engine. Though that may be true, I took the opportunity of an empty engine bay while doing my headgaskets to fit the EJ Radiator in. This will not only help with cooling capacity, but enable the EJ hoses to be used too. The hoses to adapt the EJ22 to EA82 radiator worked, but were somewhat convoluded and made finding hoses difficult. The day I blew my headgasket, started with a hose splitting in half. As a preventitive I wanted to build a spare lower. Having to hunt down two seperate hoses to frankenstein into a useable one is harder than you may think- especially in an emergency and when time is a factor.</p><p><b>In case you want the secret sauce:</b> EJ22 Upper hose still works with an ea82 radiator, you just need to cut it down a little and use a piece of old hose to adapter the larger diameter hose to the radiator. For the lower, EJ22 hose works still - cut it down a little and splice it together with a 2003 Ford Focus Lower hose. I don't have pictures, but if you get the hoses in your hand you'll know what to do. But don't do that. I think its more of a pain than adapting the EJ22 Radiator.</p>
+            <h3>Damage</h3>
+            <p>I drove the 2017 Oregon Gambler 500 (and subsequent Mtn Roo meetups) with a skid plate attached to the factory plate mounts with stock height in the front. As you can see here, the lower radiator support is beaten to hell. It was sitting at the center 1 inch higher than it did the day it left it's home in Japan.</p>
+            <img src="../static/img/guides/ej22radiator/2eaToEjRadiator-min.jpg"/>
+            <img src="../static/img/guides/ej22radiator/3eaToEjRadiator-min.jpg"/>
+            <img src="../static/img/guides/ej22radiator/4eaToEjRadiator-min.jpg"/>
+            <img src="../static/img/guides/ej22radiator/5eaToEjRadiator-min.jpg"/>
+            <h3>Measuring</h3>
+            <p>I over cut the slot in the lower-support to allow for me some wiggle room once I was fine tuning the slot later. The slot was cut because the EJ radiator is roughly 2 inches too tall for the space, even when your lower support isnt beat up. If you aren't pressed for time like I was, I suggest cutting the entire lower support out and building an entirely new cross-member. If you do decide to cut a slot rather than replace the whole support, I found that a 2x4 acts a a pretty decent stand in for the radiator. Keep in mind, it is 1/8th less-wide than the radiator.</p>
+            <img src="../static/img/guides/ej22radiator/81_x1000.jpg"/>
+            <img src="../static/img/guides/ej22radiator/10eaToEjRadiator-min.jpg"/>
+            <img src="../static/img/guides/ej22radiator/1eaToEjRadiator-min.jpg"/>
+            <img src="../static/img/guides/ej22radiator/12eaToEjRadiator-min.jpg"/>
+            <img src="../static/img/guides/ej22radiator/15eaToEjRadiator-min.jpg"/>
+            <img src="../static/img/guides/ej22radiator/13eaToEjRadiator-min.jpg"/>
+            <img src="../static/img/guides/ej22radiator/16eaToEjRadiator-min.jpg"/>
+            <h3>New support</h3>
+            <p>I ended up cutting the side closest to the engine completely out, and wrapping that with a piece of 1.5x1/8 angle iron and boogering it up liberally with my MIG welder.</p>
+            <p>Note that the EJ Radiator is attached differently than the EA radiator was. Pins held the EJ to the frame in the car it is meant for from above, the EA is secured from the front with machine bolts. My solution was to weld nuts under my new upper support and have the bolts fit into the EJ bushings.</p><p><b>TIP:</b> The bolts I used needed to be shortened slightly, this can be easily done by threading a nut onto the bolt and cutting it to the desired length. Then when you remove the nut, it chases the threads like a die would. I also sharpened mine to a dull point, so they would self-center in the radiator bushing. </p>
+            <img src="../static/img/guides/ej22radiator/eaejrad-done-worad-min.jpg"/>
+            <img src="../static/img/guides/ej22radiator/eaejrad-done-min.jpg"/>
         </div>
     </section>
 
