--- a/index.html
+++ b/index.html
@@ -202,13 +202,13 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/swapguide-min.png');" class="item h2 w4" data-id="9" data-category="ea82" data-description="Swap guide from Ultimatesubaru" data-title="EA82 to Ej22 Swap Guide">
+          <div style="background-image: url('/static/img/guides/swapguide-min.png');" class="item h2 w4" data-id="9" data-category="ea82" data-description="numbchux swap guide" data-title="EA82 to Ej22 Swap Guide">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
                 <a href="./detail-page/ea82-to-ej22-swap-guide.html"> <div class="item-content">
                 <div class="card-title">EA82 to Ej22 Swap Guide</div>
-                <div class="card-description">Swap guide from Ultimatesubaru</div>
+                <div class="card-description">numbchux swap guide</div>
                 </a>
                 </div>
               </div>
@@ -241,7 +241,20 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="12" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
+          <div style="background-image: url('/static/img/guides/ej22radiator/9eaToEjRadiator-min.jpg');" class="item h2 w4" data-id="12" data-category="ea82" data-description="EJ22 Swap" data-title="Fitting an EJ22 Radiator in an L-series">
+
+              <div class="card">
+                <!--<div class="card-id">ea82</div> -->
+                <a href="./detail-page/fitting-an-ej22-radiator-in-an-l-series.html"> <div class="item-content">
+                <div class="card-title">Fitting an EJ22 Radiator in an L-series</div>
+                <div class="card-description">EJ22 Swap</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="13" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
@@ -254,25 +267,12 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="13" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
+          <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="14" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
 
               <div class="card">
                 <!--<div class="card-id">ej22</div> -->
                 <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
                 <div class="card-title">End Wrench: EJ22 Overhaul</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/forester-snorkle1.jpg');" class="item h2 w4" data-id="14" data-category="Forester" data-description="" data-title="2nd Gen Forester Snorkle">
-
-              <div class="card">
-                <!--<div class="card-id">Forester</div> -->
-                <a href="./detail-page/2nd-gen-forester-snorkle.html"> <div class="item-content">
-                <div class="card-title">2nd Gen Forester Snorkle</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -293,7 +293,20 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-id="16" data-category="Generic Info" data-description="" data-title="DIY Head Porting">
+          <div style="background-image: url('/static/img/guides/forester-snorkle1.jpg');" class="item h2 w4" data-id="16" data-category="Forester" data-description="" data-title="2nd Gen Forester Snorkle">
+
+              <div class="card">
+                <!--<div class="card-id">Forester</div> -->
+                <a href="./detail-page/2nd-gen-forester-snorkle.html"> <div class="item-content">
+                <div class="card-title">2nd Gen Forester Snorkle</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-id="17" data-category="Generic Info" data-description="" data-title="DIY Head Porting">
 
               <div class="card">
                 <!--<div class="card-id">Generic Info</div> -->
@@ -306,7 +319,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/hitachiLinkage.gif');" class="item h2 w4" data-id="17" data-category="ea82" data-description="" data-title="Mechanical Conversion on Hitachi Carbs">
+          <div style="background-image: url('/static/img/guides/hitachiLinkage.gif');" class="item h2 w4" data-id="18" data-category="ea82" data-description="" data-title="Mechanical Conversion on Hitachi Carbs">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
@@ -319,7 +332,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/hitachi-rebuild.png');" class="item h2 w4" data-id="18" data-category="ea82" data-description="" data-title="Hitachi Carb Rebuild">
+          <div style="background-image: url('/static/img/guides/hitachi-rebuild.png');" class="item h2 w4" data-id="19" data-category="ea82" data-description="" data-title="Hitachi Carb Rebuild">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
@@ -332,7 +345,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/IgnitionModuleTest.jpg');" class="item h2 w4" data-id="19" data-category="ea82" data-description="" data-title="Ignition Module Testing">
+          <div style="background-image: url('/static/img/guides/IgnitionModuleTest.jpg');" class="item h2 w4" data-id="20" data-category="ea82" data-description="" data-title="Ignition Module Testing">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
@@ -345,46 +358,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="20" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
-
-              <div class="card">
-                <!--<div class="card-id">ea82</div> -->
-                <a href="./detail-page/cooler-thermoswitch.html"> <div class="item-content">
-                <div class="card-title">Cooler Thermoswitch</div>
-                <div class="card-description">Get your electric fan to switch on at a lower temp</div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-id="21" data-category="Generic Info" data-description="" data-title="DIY: Welded Differential">
-
-              <div class="card">
-                <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/diy-welded-differential.html"> <div class="item-content">
-                <div class="card-title">DIY: Welded Differential</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="22" data-category="Generic Info" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
-
-              <div class="card">
-                <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/diy-fender-cutting-rolling.html"> <div class="item-content">
-                <div class="card-title">DIY Fender Cutting &amp; Rolling</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="23" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
+          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="21" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
@@ -397,7 +371,46 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/torque.jpg');" class="item h2 w4" data-id="24" data-category="Generic Info" data-description="" data-title="1985-96 Engine Torque Specs">
+          <div style="background-image: url('/static/img/guides/diffwelding.gif');" class="item h2 w4" data-id="22" data-category="Generic Info" data-description="" data-title="DIY: Welded Differential">
+
+              <div class="card">
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/diy-welded-differential.html"> <div class="item-content">
+                <div class="card-title">DIY: Welded Differential</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="23" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
+
+              <div class="card">
+                <!--<div class="card-id">ea82</div> -->
+                <a href="./detail-page/cooler-thermoswitch.html"> <div class="item-content">
+                <div class="card-title">Cooler Thermoswitch</div>
+                <div class="card-description">Get your electric fan to switch on at a lower temp</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="24" data-category="Generic Info" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
+
+              <div class="card">
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/diy-fender-cutting-rolling.html"> <div class="item-content">
+                <div class="card-title">DIY Fender Cutting &amp; Rolling</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/torque.jpg');" class="item h2 w4" data-id="25" data-category="Generic Info" data-description="" data-title="1985-96 Engine Torque Specs">
 
               <div class="card">
                 <!--<div class="card-id">Generic Info</div> -->
@@ -410,7 +423,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/notching.jpg');" class="item h2 w4" data-id="25" data-category="Generic Info" data-description="BillaVista Offroad Tech" data-title="Chopsaw Tube Notching">
+          <div style="background-image: url('/static/img/guides/notching.jpg');" class="item h2 w4" data-id="26" data-category="Generic Info" data-description="BillaVista Offroad Tech" data-title="Chopsaw Tube Notching">
 
               <div class="card">
                 <!--<div class="card-id">Generic Info</div> -->
@@ -423,7 +436,7 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/JesZeK-SubaruEA82AnimatedEngine.gif');" class="item h2 w4" data-id="26" data-category="ea82" data-description="" data-title="Weber Conversion">
+          <div style="background-image: url('/static/img/guides/JesZeK-SubaruEA82AnimatedEngine.gif');" class="item h2 w4" data-id="27" data-category="ea82" data-description="" data-title="Weber Conversion">
 
               <div class="card">
                 <!--<div class="card-id">ea82</div> -->
@@ -447,11 +460,10 @@
     <p style="margin-top:25px;">Found this website helpful?<br><a href="https://www.paypal.me/devgorilla/1" ><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="120" height="20"><linearGradient id="b" x2="0" y2="100%"><stop offset="0" stop-color="#bbb" stop-opacity=".1"/><stop offset="1" stop-opacity=".1"/></linearGradient><clipPath id="a"><rect width="120" height="20" rx="3" fill="#fff"/></clipPath><g clip-path="url(#a)"><path fill="#555" d="M0 0h21v20H0z"/><path fill="#007ec6" d="M21 0h99v20H21z"/><path fill="url(#b)" d="M0 0h120v20H0z"/></g><g fill="#fff" text-anchor="middle" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="110"><text x="115" y="150" fill="#010101" fill-opacity=".3" transform="scale(.1)" textLength="110">☕</text><text x="115" y="140" transform="scale(.1)" textLength="110">☕</text><text x="695" y="150" fill="#010101" fill-opacity=".3" transform="scale(.1)" textLength="890">Donate a buck</text><text x="695" y="140" transform="scale(.1)" textLength="890">Donate a buck</text></g> </svg></a></p>
     <div id="ad-wrapper"> 320x50</div>
     <div class="disclaimer" >
-      <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. Always seek the advice of liscenced mechanic with any questions you may have regarding your vehicle. Never disregard professional advice or delay in seeking it because of something you have read or seen on the Site.</p>
-      <p>LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the content, which is provided as is, and without warranties.</p>
+      <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the content, which is provided as is, and without warranties.
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.15.18-23.58</p>
+      <p >v1-08.19.18-09.06</p>
     </a>
   </footer>
 
