--- a/list.html
+++ b/list.html
@@ -94,6 +94,16 @@
         <td>  <a href="/static/pdf/techbillavistaRecovery.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
+        <td>Haynes Weber Carburator Manual</td>
+        <td>
+            <a href="https://www.facebook.com/groups/55757792531">
+        Old School Subaru Group
+            </a>
+      </td>
+        <td> <a href="https://www.facebook.com/groups/55757792531/files/" class="btn grey-background">Link</a>  </td>
+        <td>  <a href="/static/pdf/WeberCarburatorManual.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
         <td>Tube Bending 101</td>
         <td>
         Rob Park
@@ -204,16 +214,6 @@
         <td>  <a href="/static/pdf/EJ22-Overhaul.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
-        <td>Fuel Injector Cleaning</td>
-        <td>
-            <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
-        Loyale 2.7 Turbo
-            </a>
-      </td>
-        <td> <a href="https://www.ultimatesubaru.org/forum/topic/151458-easy-fuel-injector-cleansing-procedures/" class="btn grey-background">Link</a>  </td>
-        <td>  <a href="/static/pdf/easy-fuel-injector-cleansing-procedures.pdf" class="btn grey-background">PDF</a>  </td>
-      </tr>
-      <tr>
         <td>2nd Gen Forester Snorkle</td>
         <td>
             <a href="https://www.instagram.com/brianlipke">
@@ -224,12 +224,14 @@
         <td>  </td>
       </tr>
       <tr>
-        <td>DIY Head Porting</td>
+        <td>Fuel Injector Cleaning</td>
         <td>
-        Tech Staff
+            <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
+        Loyale 2.7 Turbo
+            </a>
       </td>
-        <td>  </td>
-        <td>  <a href="/static/pdf/Head-Porting-DIY.pdf" class="btn grey-background">PDF</a>  </td>
+        <td> <a href="https://www.ultimatesubaru.org/forum/topic/151458-easy-fuel-injector-cleansing-procedures/" class="btn grey-background">Link</a>  </td>
+        <td>  <a href="/static/pdf/easy-fuel-injector-cleansing-procedures.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>Mechanical Conversion on Hitachi Carbs</td>
@@ -242,12 +244,30 @@
         <td>  <a href="/static/pdf/Mechanical-Conversion-on-Hitachi-Carburetors.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
+        <td>DIY Head Porting</td>
+        <td>
+        Tech Staff
+      </td>
+        <td>  </td>
+        <td>  <a href="/static/pdf/Head-Porting-DIY.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
         <td>Hitachi Carb Rebuild</td>
         <td>
         
       </td>
         <td>  </td>
         <td>  <a href="/static/pdf/Hitachicarburetor.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
+        <td>Hitachi Training Manual, 1979</td>
+        <td>
+            <a href="https://www.facebook.com/groups/55757792531">
+        Old School Subaru Group
+            </a>
+      </td>
+        <td> <a href="https://www.facebook.com/groups/55757792531/files/" class="btn grey-background">Link</a>  </td>
+        <td>  <a href="/static/pdf/HitachiTrainingmanual.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>Ignition Module Testing</td>
@@ -266,6 +286,16 @@
       </td>
         <td>  </td>
         <td>  <a href="/static/pdf/howToKeepYourSubaruAlive.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
+        <td>L-series Workshop Manual</td>
+        <td>
+            <a href="https://www.facebook.com/groups/55757792531">
+        Old School Subaru Group
+            </a>
+      </td>
+        <td> <a href="https://www.facebook.com/groups/55757792531/files/" class="btn grey-background">Link</a>  </td>
+        <td>  <a href="/static/pdf/L-seriesWorkshopManual.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>DIY: Welded Differential</td>
@@ -331,7 +361,7 @@
       <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the content, which is provided as is, and without warranties.
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-08.19.18-09.06</p>
+      <p >v1-08.21.18-08.03</p>
     </a>
   </footer>
 
