--- a/detail-page/forester-skid-plate-blueprint.html
+++ b/detail-page/forester-skid-plate-blueprint.html
@@ -25,10 +25,10 @@
   <meta name="description" content="Curated Offroad Subaru Build Guides.">
   <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
   <!--  Facebook -->
-  <meta property="og:title" content="  DIY Fender Cutting &amp; Rolling " />
+  <meta property="og:title" content="  Forester Skid Plate BluePrint " />
   <meta property="og:description" content="   " />
 
-    <meta property="og:image" content="/static/img/guides/fenderRolling.jpg" />
+    <meta property="og:image" content="/static/img/guides/SFForesterSumpGuard.jpg" />
 
 
 </head>
@@ -57,14 +57,13 @@
 
 
     <section class="details">
-        <h1 class="details-headline">DIY Fender Cutting &amp; Rolling</h1>
+        <h1 class="details-headline">Forester Skid Plate BluePrint</h1>
         
-          <a href="https://www.pirate4x4.com/forum/ford/824933-tips-fender-cutting.html" class="btn grey-background">Link</a>
-          <a href="/static/pdf/tips-fender-cutting.pdf" class="btn grey-background">PDF Archive</a>
+          <a href="https://www.subaruforester.org/vbulletin/f139/skidplate-44391/" class="btn grey-background">Link</a>
 
         <div class="details-content">
-            <img  src="/static/img/guides/fenderRolling.jpg">
-            <p>This was a great source of inspiration for my own project when I cut and rolled my fenders.</p><p> You need a welder, tin snips, flap sander, a pair of pliers and an hour or two each wheel well to make a uniform lip that looks nearly factory.</p>
+            <img  src="/static/img/guides/SFForesterSumpGuard.jpg">
+            <p></p>
         </div>
     </section>
 
