“submit yaydyaydaa to Contact

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
           <select class="control-field filter-field form-control">
             <!--TODO this needs to be created by handlebars-->
             <option value="" selected>All Types</option>
+              <option value="L-SERIES">L-SERIES</option>
               <option value="GENERIC INFO">GENERIC INFO</option>
               <option value="CROSSTREK">CROSSTREK</option>
-              <option value="L-SERIES">L-SERIES</option>
               <option value="EJ22">EJ22</option>
               <option value="FORESTER">FORESTER</option>
           </select>
@@ -85,12 +85,38 @@
       <div class="grid">
         <!-- Tiles! -->
 
+          <div style="background-image: url('/static/img/guides/WeberCarburatorManual-min.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="Haynes Weber Carburator Manual">
+
+              <div class="card">
+                <!--<div class="card-id">L-series</div> -->
+                <a href="./detail-page/haynes-weber-carburator-manual.html"> <div class="item-content">
+                <div class="card-title">Haynes Weber Carburator Manual</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
           <div style="background-image: url('/static/img/guides/cvgrease.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="Advice for Longer CV Joints Life">
 
               <div class="card">
                 <!--<div class="card-id">Generic Info</div> -->
                 <a href="./detail-page/advice-for-longer-cv-joints-life.html"> <div class="item-content">
                 <div class="card-title">Advice for Longer CV Joints Life</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="DIY: Swing Away Bumper">
+
+              <div class="card">
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
+                <div class="card-title">DIY: Swing Away Bumper</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -111,19 +137,6 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/WeberCarburatorManual-min.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="Haynes Weber Carburator Manual">
-
-              <div class="card">
-                <!--<div class="card-id">L-series</div> -->
-                <a href="./detail-page/haynes-weber-carburator-manual.html"> <div class="item-content">
-                <div class="card-title">Haynes Weber Carburator Manual</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
           <div style="background-image: url('/static/img/guides/recovery.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="Safe Recovery Technique">
 
               <div class="card">
@@ -137,13 +150,13 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/foz.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="DIY: Swing Away Bumper">
+          <div style="background-image: url('/static/img/guides/subaru-history.jpg');" class="item h2 w4" data-category="Generic Info" data-description="Subaru research and information website" data-title="Cars101.com">
 
               <div class="card">
                 <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
-                <div class="card-title">DIY: Swing Away Bumper</div>
-                <div class="card-description"></div>
+                <a href="./detail-page/cars101-com.html"> <div class="item-content">
+                <div class="card-title">Cars101.com</div>
+                <div class="card-description">Subaru research and information website</div>
                 </a>
                 </div>
               </div>
@@ -189,32 +202,6 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/subaru-history.jpg');" class="item h2 w4" data-category="Generic Info" data-description="Subaru research and information website" data-title="Cars101.com">
-
-              <div class="card">
-                <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/cars101-com.html"> <div class="item-content">
-                <div class="card-title">Cars101.com</div>
-                <div class="card-description">Subaru research and information website</div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/ejIntake.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="DIY: Intake">
-
-              <div class="card">
-                <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/diy-intake.html"> <div class="item-content">
-                <div class="card-title">DIY: Intake</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
           <div style="background-image: url('/static/img/guides/swapguide-min.png');" class="item h2 w4" data-category="L-series" data-description="numbchux swap guide" data-title="EA82 to Ej22 Swap Guide">
 
               <div class="card">
@@ -241,6 +228,19 @@
 
           </div>
 
+          <div style="background-image: url('/static/img/guides/ej22radiator/9eaToEjRadiator-min.jpg');" class="item h2 w4" data-category="L-series" data-description="EJ22 Swap" data-title="Fitting an EJ22 Radiator in an L-series">
+
+              <div class="card">
+                <!--<div class="card-id">L-series</div> -->
+                <a href="./detail-page/fitting-an-ej22-radiator-in-an-l-series.html"> <div class="item-content">
+                <div class="card-title">Fitting an EJ22 Radiator in an L-series</div>
+                <div class="card-description">EJ22 Swap</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
           <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-category="L-series" data-description="" data-title="Rear e-Brake Retrofit ">
 
               <div class="card">
@@ -254,13 +254,13 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/ej22radiator/9eaToEjRadiator-min.jpg');" class="item h2 w4" data-category="L-series" data-description="EJ22 Swap" data-title="Fitting an EJ22 Radiator in an L-series">
+          <div style="background-image: url('/static/img/guides/ejIntake.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="DIY: Intake">
 
               <div class="card">
-                <!--<div class="card-id">L-series</div> -->
-                <a href="./detail-page/fitting-an-ej22-radiator-in-an-l-series.html"> <div class="item-content">
-                <div class="card-title">Fitting an EJ22 Radiator in an L-series</div>
-                <div class="card-description">EJ22 Swap</div>
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/diy-intake.html"> <div class="item-content">
+                <div class="card-title">DIY: Intake</div>
+                <div class="card-description"></div>
                 </a>
                 </div>
               </div>
@@ -286,32 +286,6 @@
                 <!--<div class="card-id">ej22</div> -->
                 <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
                 <div class="card-title">End Wrench: EJ22 Overhaul</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/forester-snorkle1.jpg');" class="item h2 w4" data-category="Forester" data-description="" data-title="2nd Gen Forester Snorkle">
-
-              <div class="card">
-                <!--<div class="card-id">Forester</div> -->
-                <a href="./detail-page/2nd-gen-forester-snorkle.html"> <div class="item-content">
-                <div class="card-title">2nd Gen Forester Snorkle</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/SFForesterSumpGuard.jpg');" class="item h2 w4" data-category="Forester" data-description="" data-title="Forester Skid Plate BluePrint">
-
-              <div class="card">
-                <!--<div class="card-id">Forester</div> -->
-                <a href="./detail-page/forester-skid-plate-blueprint.html"> <div class="item-content">
-                <div class="card-title">Forester Skid Plate BluePrint</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -345,6 +319,32 @@
 
           </div>
 
+          <div style="background-image: url('/static/img/guides/SFForesterSumpGuard.jpg');" class="item h2 w4" data-category="Forester" data-description="" data-title="Forester Skid Plate BluePrint">
+
+              <div class="card">
+                <!--<div class="card-id">Forester</div> -->
+                <a href="./detail-page/forester-skid-plate-blueprint.html"> <div class="item-content">
+                <div class="card-title">Forester Skid Plate BluePrint</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/forester-snorkle1.jpg');" class="item h2 w4" data-category="Forester" data-description="" data-title="2nd Gen Forester Snorkle">
+
+              <div class="card">
+                <!--<div class="card-id">Forester</div> -->
+                <a href="./detail-page/2nd-gen-forester-snorkle.html"> <div class="item-content">
+                <div class="card-title">2nd Gen Forester Snorkle</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
           <div style="background-image: url('/static/img/guides/hitachiLinkage.gif');" class="item h2 w4" data-category="L-series" data-description="" data-title="Mechanical Conversion on Hitachi Carbs">
 
               <div class="card">
@@ -371,19 +371,6 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/hitachiGuide.png');" class="item h2 w4" data-category="L-series" data-description="Carburetor Theory, Operation &amp; Servicing" data-title="Hitachi Training Manual, 1979">
-
-              <div class="card">
-                <!--<div class="card-id">L-series</div> -->
-                <a href="./detail-page/hitachi-training-manual-1979.html"> <div class="item-content">
-                <div class="card-title">Hitachi Training Manual, 1979</div>
-                <div class="card-description">Carburetor Theory, Operation &amp; Servicing</div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
           <div style="background-image: url('/static/img/guides/IgnitionModuleTest.jpg');" class="item h2 w4" data-category="L-series" data-description="" data-title="Ignition Module Testing">
 
               <div class="card">
@@ -404,6 +391,19 @@
                 <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
                 <div class="card-title">How To Keep Your Subaru Alive</div>
                 <div class="card-description">This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/hitachiGuide.png');" class="item h2 w4" data-category="L-series" data-description="Carburetor Theory, Operation &amp; Servicing" data-title="Hitachi Training Manual, 1979">
+
+              <div class="card">
+                <!--<div class="card-id">L-series</div> -->
+                <a href="./detail-page/hitachi-training-manual-1979.html"> <div class="item-content">
+                <div class="card-title">Hitachi Training Manual, 1979</div>
+                <div class="card-description">Carburetor Theory, Operation &amp; Servicing</div>
                 </a>
                 </div>
               </div>
@@ -462,19 +462,6 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/torque.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="1985-96 Engine Torque Specs">
-
-              <div class="card">
-                <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/1985-96-engine-torque-specs.html"> <div class="item-content">
-                <div class="card-title">1985-96 Engine Torque Specs</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
           <div style="background-image: url('/static/img/guides/notching.jpg');" class="item h2 w4" data-category="Generic Info" data-description="BillaVista Offroad Tech" data-title="Chopsaw Tube Notching">
 
               <div class="card">
@@ -501,6 +488,19 @@
 
           </div>
 
+          <div style="background-image: url('/static/img/guides/torque.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="1985-96 Engine Torque Specs">
+
+              <div class="card">
+                <!--<div class="card-id">Generic Info</div> -->
+                <a href="./detail-page/1985-96-engine-torque-specs.html"> <div class="item-content">
+                <div class="card-title">1985-96 Engine Torque Specs</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
       </div>
       <div id="noResults"></div>
     </section>
@@ -508,14 +508,14 @@
 
 
   <footer>
-    <a href="mailto:dwbrown89@gmail.com">Submit Writeup</a>
+    <a href="mailto:dwbrown89@gmail.com">Contact</a>
     <p style="margin-top:25px;">Found this website helpful?<br><a href="https://www.paypal.me/devgorilla/1" ><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="120" height="20"><linearGradient id="b" x2="0" y2="100%"><stop offset="0" stop-color="#bbb" stop-opacity=".1"/><stop offset="1" stop-opacity=".1"/></linearGradient><clipPath id="a"><rect width="120" height="20" rx="3" fill="#fff"/></clipPath><g clip-path="url(#a)"><path fill="#555" d="M0 0h21v20H0z"/><path fill="#007ec6" d="M21 0h99v20H21z"/><path fill="url(#b)" d="M0 0h120v20H0z"/></g><g fill="#fff" text-anchor="middle" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="110"><text x="115" y="150" fill="#010101" fill-opacity=".3" transform="scale(.1)" textLength="110">☕</text><text x="115" y="140" transform="scale(.1)" textLength="110">☕</text><text x="695" y="150" fill="#010101" fill-opacity=".3" transform="scale(.1)" textLength="890">Donate a buck</text><text x="695" y="140" transform="scale(.1)" textLength="890">Donate a buck</text></g> </svg></a></p>
     <div id="ad-wrapper"> 320x50</div>
     <div class="disclaimer" >
       <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the content, which is provided as is, and without warranties.
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-09.11.18-54.10</p>
+      <p >v1-09.14.18-21.06</p>
     </a>
   </footer>
 
